# qni-gl

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.flask  Dockerfile.flask-test  DockerfileDeploy  LICENSE  README.md  anti-control-gate.ts  app.ts  bloch-sphere.ts  circuit-step.ts  circuit.ts  circular-gate-mixin.ts  client.ipynb  constructor.ts  control-gate.ts  cypress.config.js  docker-compose.yml  docker-entrypoint.sh  dropzone.ts  gate-palette.ts  gate-source.ts  gate.ts  h-gate.ts  index.html  logger.ts  main.ts  measurement-gate.ts  old-gate-palette.ts  package-lock.json  package.json  phase-gate.ts  playwright.config.ts  qft-dagger-gate.ts  qft-gate.ts  qni.js  rnot-gate.ts  (+19 more)
.github/workflows/: ci.yml  playwright.yml  visual-regression-test.yml
abci_ood/: README.md  form.yml  manifest.yml  submit.yml.erb  view.html.erb
abci_ood/singularity/: qni-gl.def
abci_ood/template/: after.sh  before.sh.erb  script.sh.erb
backend/: .coverage  .coverage.MacBook-Pro-5.local.87825.XsgZIEKx  .gitignore  Gemfile  backend.ini  backend.py  cirq_runner.py  gunicorn.conf.py  merged.conf  pyproject.toml  pytest.ini  requirements.txt  tox.ini
backend/app/controllers/: backend_controller.rb
backend/app/views/backend/: show.json.jbuilder
backend/config/: credentials.yml.enc
backend/config/initializers/: cors.rb
backend/docs/qni/: backend.html  cached_qiskit_runner.html  circuit_request_data.html  index.html  logging_config.html  qiskit_circuit_builder.html  qiskit_runner.html  types.html
backend/docs/source/: conf.py  index.rst
backend/src/: backend.py  bell.py  cirq_runner.py  ghz.py  gpu_runner.py  qiskit_runner.py  types.py  write0.py  write1.py
backend/src/qni/: __about__.py  __init__.py  backend.py  cached_qiskit_runner.py  circuit_request_data.py  logging_config.py  qiskit_circuit_builder.py  qiskit_runner.py  request_data.py  types.py
backend/src/qni.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_backend.py  test_cached_qiskit_runner.py  test_cirq_runner.py  test_cnot.py  test_control.py  test_controlled_h.py  test_controlled_rnot.py  test_controlled_s.py  test_controlled_s_dagger.py  test_controlled_t.py  test_controlled_t_dagger.py  test_controlled_y.py  test_controlled_z.py  test_cz.py  test_gpu.py  test_h.py  test_i.py  test_measurement.py  test_qiskit_circuit_builder.py  test_qiskit_runner.py  test_request_data.py  test_rnot.py  test_s.py  test_s_dagger.py  test_swap.py  test_t.py  test_t_dagger.py  test_write0.py  test_write1.py  test_x.py  test_y.py  test_z.py
backend_flask/: backend.ini  backend.py  cirq_server.py  maho.py  merged.conf  sim.ini  sim.py
backend_rails/: Dockerfile
backend_rails/config/: credentials.yml.enc  routes.rb
backend_rails/lib/: cirq.rb
cypress/e2e/: canvas.cy.js  dropzone.cy.js  gate-palette.cy.js  h-hover.cy.js
cypress/support/: e2e.ts
doc/: algorithm_library_pitch.md  url_encode_pitch.md
docs/: index.html  modules.html
docs/assets/: navigation.js  search.js
docs/classes/: AntiControlGate.html  App.html  BlochSphere.html  Circuit.html  CircuitStep.html  CircularGate.html  ControlGate.html  Dropzone.html  Gate.html  GatePalette.html  GateSource.html  HGate.html  Logger.html  MeasurementGate.html  PhaseGate.html  QFTDaggerGate.html  QFTGate.html  RnotGate.html  RxGate.html  RyGate.html  RzGate.html  SDaggerGate.html  SGate.html  SquareGate.html  SwapGate.html  TDaggerGate.html  TGate.html  Write0Gate.html  Write1Gate.html  WriteGate.html  XGate.html  YGate.html  ZGate.html
docs/functions/: CircularGateMixin.html  SquareGateMixin.html  spacingInPx.html
docs/types/: ClickEvent.html  Constructor.html  DragEvent.html  SignalGate.html  SignalGateWithPosition.html
frontend/: .env.development  .env.production  .gitignore  .yarnrc.yml  eslint.config.js  index.html  main.ts  output.css  package-lock.json  package.json  playwright.config.ts  rollup.config.js  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
frontend/public/: import-modal.html  serviceWorker.js  serviceWorker.js.map  share-modal.html
frontend/src/: algorithms.ts  app.ts  circuit-component.ts  circuit-frame.ts  circuit-step-component.ts  circuit-step-dropzones.ts  circuit-step-events.ts  circuit-step-marker-manager.ts  circuit-step-state.ts  circuit-step.ts  circuit.ts  circular-gate-mixin.ts  colors.ts  constants.ts  index.ts  (+57 more)
public/: serviceWorker.js  serviceWorker.js.map
src/: anti-control-gate.ts  app.ts  bloch-sphere.ts  circuit-component.ts  circuit-step-component.ts  circuit-step.ts  circuit.ts  circular-gate-mixin.ts  colors.ts  control-gate.ts  dropzone-component.ts  dropzone.ts  gate-component.ts  gate-palette-component.ts  gate-palette.ts  gate-source-component.ts  gate-source.ts  gate.ts  grid-layout.ts  h-gate.ts  index.ts  jsonable-mixin.ts  logger.ts  measurement-gate.ts  operation.ts  phase-gate.ts  qft-dagger-gate.ts  qft-gate.ts  qubit-circle.ts  rnot-gate.ts  rx-gate.ts  ry-gate.ts  rz-gate.ts  s-dagger-gate.ts  s-gate.ts  serviceWorker.js  serviceWorker.ts  simulator.ts  size.ts  spacing.ts  (+13 more)
test/: gate.test.ts  h-gate.test.ts
tests/: dropzone.spec.ts  example.spec.ts  gate-palette.spec.ts  start-screen.spec.ts
vite/: Dockerfile  docker-entrypoint.sh  eslint.config.js  package.json  playwright.config.ts  requirements.txt  vite.config.ts
(+124 files in other folders)
