[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qni"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Yasuhito Takamiya", email = "yasuhito@hey.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "qiskit>=1.2.1",
  "qiskit-aer>=0.15.0", # If you want to use GPU, change to "qiskit-aer-gpu>=0.15.0"
  "flask-cors>=5.0.0",
  "gunicorn>=23.0.0",
  "pytest>=8.3.2",
  "coverage>=7.6.1",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.urls]
Documentation = "https://github.com/yasuhito/qni#readme"
Issues = "https://github.com/yasuhito/qni/issues"
Source = "https://github.com/yasuhito/qni"

[tool.hatch.version]
path = "src/qni/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/qni tests}"

[tool.coverage.run]
source_pkgs = ["qni", "tests"]
branch = true
parallel = true
omit = [
  "src/qni/__about__.py",
  "tests/__init__.py",
]

[tool.coverage.paths]
qni = ["src/qni", "*/qni/src/qni"]
tests = ["tests", "*/qni/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx"
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs/source docs/build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "docs",
]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]

[tool.hatch.envs.dev.scripts]
format = "ruff format"

