[project]
name = "qni"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Yasuhito Takamiya", email = "yasuhito@hey.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "qiskit>=1.2.1",
  "qiskit-aer>=0.15.0", # If you want to use GPU, change to "qiskit-aer-gpu>=0.15.0"
  "flask-cors>=5.0.0",
  "gunicorn>=23.0.0",
  "numpy>=1.26.0"
]

[project.urls]
Documentation = "https://github.com/yasuhito/qni#readme"
Issues = "https://github.com/yasuhito/qni/issues"
Source = "https://github.com/yasuhito/qni"

[tool.uv]
dev-dependencies = [
  "ruff>=0.9.6",
  "pytest>=8.3.4",
  "coverage>=7.6.12",
  "mypy>=1.15.0",
  "types-flask-cors"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["qni"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "docs",
]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]

[tool.mypy]
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]